wip fixing certs

--- a/tools/kubify/kubify/k8s/ansible/roles/generate_configs_from_kubify_yaml/templates/ingress.yaml.j2
+++ b/tools/kubify/kubify/k8s/ansible/roles/generate_configs_from_kubify_yaml/templates/ingress.yaml.j2
@@ -9,6 +9,8 @@ metadata:
     kubify_version: "{{ kubify_version }}"
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+
 {% if cert_issuer == 'ca-issuer' %}
     certmanager.k8s.io/issuer: "{{ cert_issuer }}"
 {% else %}
