--- a/tools/kubify/kubify/k8s/ansible/roles/generate_configs_from_kubify_yaml/templates/Dockerfile.dev.j2
+++ b/tools/kubify/kubify/k8s/ansible/roles/generate_configs_from_kubify_yaml/templates/Dockerfile.dev.j2
@@ -57,7 +57,7 @@ RUN mkdir -p /ops
 RUN echo '\
 {% set start_script = kubify_config | json_query('dev.scripts.start') %}
 {% if start_script is not none %}
-{{ start_script.split('\n') | join('; ') | replace('\'', '\'\"\'\"\'') | indent(width=4, indentfirst=true) }} \
+{{ start_script.split('\n') | join('; ') | replace('\'', '\'\"\'\"\'') | indent(width=4, first=true) }} \
 {% else %}
 {{ builder_cmd }} run dev \
 {% endif %}' > /app/dev.sh
