--- a/tools/kubify/kubify/k8s/ansible/roles/generate_configs_from_kubify_yaml/templates/database.yaml.j2
+++ b/tools/kubify/kubify/k8s/ansible/roles/generate_configs_from_kubify_yaml/templates/database.yaml.j2
@@ -53,7 +53,7 @@ metadata:
     kubify_version: "{{ kubify_version }}"
 data:
   data.sql: |
-{{ db.init.script | indent(width=4, indentfirst=true) }}
+{{ db.init.script | indent(width=4, first=true) }}
 {% endif %}
 {% elif db.type == 'mongo' %}
 ---
