--- a/kubify/ops/ansible/roles/generate_configs_from_kubify_yaml/templates/deployment.yaml.j2
+++ b/kubify/ops/ansible/roles/generate_configs_from_kubify_yaml/templates/deployment.yaml.j2
@@ -89,10 +89,10 @@ spec:
           name: "{{ app_name }}-init"
       - name: init-aws-volume
         hostPath:
-          path: "/src/kubify/src/kubify/templates/aws"
+          path: "/var/folders/var/folders/templates/aws"
       - name: init-certs
         hostPath:
-          path: "/src/kubify/._kubify_work/certs"
+          path: "/var/folders/._kubify_work/certs"
       containers:
         - name: "{{ app_name }}-init"
           image: "{{ app_image }}"
