--- a/kubify/ops/ansible/roles/generate_configs_from_kubify_yaml/templates/skaffold.yaml.j2
+++ b/kubify/ops/ansible/roles/generate_configs_from_kubify_yaml/templates/skaffold.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: skaffold/v2beta13
+apiVersion: skaffold/v4beta2
 kind: Config
 build:
   artifacts:
@@ -9,7 +9,7 @@ build:
     push: false
 deploy:
   kubectl:
-    manifests:
+    remoteManifests:
 {% for m in manifests_glob %}
     - "{{ m }}"
 {% endfor %}
@@ -39,7 +39,7 @@ profiles:
 {% endfor %}
 {% endif %}
         docker:
-          dockerfile: "../../../{{ kubify_dir | basename }}/{{ env }}/{{ app_name }}/Dockerfile.dev"
+          dockerfile: "../../../kubify/{{ kubify_dir | basename }}/{{ env }}/{{ app_name }}/Dockerfile.dev"
           # TODO: should we keep squash (disk space saver)?
           # squash: true
           buildArgs:
@@ -59,7 +59,7 @@ profiles:
           - src: "/var/folders/kubify/._kubify_work/certs/***"
             dest: "/usr/local/certificates/"
         docker:
-          dockerfile: "../../../{{ kubify_dir | basename }}/{{ env }}/{{ app_name }}/Dockerfile.release"
+          dockerfile: "../../../kubify/{{ kubify_dir | basename }}/{{ env }}/{{ app_name }}/Dockerfile.release"
           buildArgs:
             NPM_TOKEN: "{% raw %}{{ .NPM_TOKEN }}{% endraw %}"
 
@@ -74,7 +74,7 @@ profiles:
       - image: "{{ app_cicd_build_image }}"
         context: .
         docker:
-          dockerfile: "../../../{{ kubify_dir | basename }}/{{ env }}/{{ app_name }}/Dockerfile.release"
+          dockerfile: "../../../kubify/{{ kubify_dir | basename }}/{{ env }}/{{ app_name }}/Dockerfile.release"
           buildArgs:
             NPM_TOKEN: "{% raw %}{{ .NPM_TOKEN }}{% endraw %}"
 
